build/log/idf_py_stderr_output_10926
Command: make -j 10 all
/home/pfasantos/esp/estoque-http-teste/main/main.c: In function '_http_event_handler':
/home/pfasantos/esp/estoque-http-teste/main/main.c:24:5: error: enumeration value 'HTTP_EVENT_REDIRECT' not handled in switch [-Werror=switch]
   24 |     switch(evt->event_id) {
      |     ^~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7161: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
